# mcu-tinkering-lab

./: .clang-format  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .project-standards.yaml  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pico  Dockerfile.simulation  ESP-IDF_Robot_Simulation.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  justfile  mypy.ini  pr-60-review.md  release-please-config.json  renovate.json  ruff.toml
.claude/: settings.json
.github/: dependabot.yml  project-matrix.json
docs/: README.md  flasher-workflow-integration.md  health-history.json  manifest.json  manifest.md  nblm-suggested-sources-2026-06-05.md
docs/schematics/: README.md  components.py  justfile  pyproject.toml  render.py  routing.py  test_routing.py
docs/schematics/circuits/: balancebot.py  gamepad_synth.py  robocar_unified.py
esp32cam-llm-telegram/: README.md  sdkconfig.defaults
robocar/: .gitignore  CLAUDE.md  Makefile  README.md
robocar/esp32-cam-idf/main/: CMakeLists.txt  ai_backend.h  ai_response_parser.c  ai_response_parser.h  camera.h  claude_api.c  config.h  credentials.h.example  credentials_loader.c  credentials_loader.h  credentials_validator.h  i2c_master.h  idf_component.yml  main.c  ollama_backend.c  ollama_backend.h  system_state.h  unified_logger.h
scripts/: install_pkgs.sh
tools/: cquality.sh  detect-esp32s3-port.sh  esp32-credentials.just  (+11 more)
tools/switch-controller-usb-test/: CLAUDE.md  README.md  justfile  pyproject.toml  switch_gadget.py  switch_probe.py  switch_proxy.py
(+674 files in other folders)
