[project]
name = "mcu-tinkering-lab-schematics"
version = "0.1.0"
description = "Text-defined circuit schematics for MCU Tinkering Lab projects"
requires-python = ">=3.11"
dependencies = [
    "schemdraw>=0.22",
    "cairosvg>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
