[project]
name = "switch-controller-usb-test"
version = "0.2.0"
description = "Nintendo Switch Pro Controller USB protocol testing tools"
requires-python = ">=3.11"
dependencies = [
    "hidapi>=0.14.0",
    "pyserial>=3.5",
]

[project.scripts]
switch-probe = "switch_probe:main"
switch-gadget = "switch_gadget:main"
switch-proxy = "switch_proxy:main"
